--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: primetime
-description: "A new Flutter project."
+description: "An Appointments Booking App"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -34,7 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_platform_widgets: ^7.0.1
+  dropdown_button2: ^2.3.9
   flutter_svg: ^2.0.16
+  collection: ^1.19.0
+  image_picker: ^0.8.7+4
   flutter_localizations:
     sdk: flutter
   intl: any
